--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,17 @@ h1,h2,h3,p{
     font-family: 'Dancing Script', cursive;
     text-align: center;
 }
+h3{
+    color: #fff;
+}
 p{
     font-size: 20px;
 }
 .trans{
     font-size: 20px;
+}
+.logo{
+    width: 8%;
 }
 .ab{
     font-size: 90px;
@@ -19,12 +25,28 @@ p{
 .order{
     text-decoration: underline;
 }
+.m{
+    padding: 10%;
+    transition: 1000ms;
+}
+.m:hover{
+    transform: scale(1.2);
+    transition: 1000ms;
+    color: #000;
+}
+.marg{
+    margin-top: 5%;
+}
 .pp{
-    float: left;
+    margin-left: -60%;
 }
 .img{
     width: 40%;
     float: right;
+}
+.foot{
+    width: 100%;
+    background-color: #000;
 }
 .carousel-fade .carousel-inner .item {
   opacity: 0;
