--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,37 @@ h1,h2,h3,p{
     font-family: 'Dancing Script', cursive;
     text-align: center;
 }
+.jum{
+    font-size: 80px;
+    
+}
+.same{
+    text-align: left;
+    margin-top: 3%;
+}
+.same1{
+    text-align: right;
+}
 .ii{
     width: 30%;
 }
+.me1{
+   margin-left: 60%;
+   border-radius: 50%;
+   width: 40%;
+}
+.me2{
+   border-radius: 50%;
+   width: 40%; 
+}
 h3{
     color: #fff;
+}
+.marg{
+    margin-top: 50%;
+    background: #fff;
+    bottom:0;
+    left:0;
 }
 p{
     font-size: 20px;
