--- a/css/main2.css
+++ b/css/main2.css
@@ -1,3 +1,28 @@
+body{
+    font-family: 'Pacifico', cursive;
+    font-family: 'Dancing Script', cursive;
+}
+h1,h2,h3,p{
+    font-family: 'Pacifico', cursive;
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+}
+p{
+    font-size: 20px;
+}
+.trans{
+    font-size: 20px;
+}
+#kMaps{
+  margin-top: 70px;
+  font-size: 35px;
+}
+#pac-input{
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+
+}
 #mapCanvas{
   width: 100%;
    height: 400px;
