--- a/css/main2.css
+++ b/css/main2.css
@@ -23,6 +23,12 @@ p{
   margin-right: 25%;
 
 }
+.marg{
+  margin-top: 5%;
+  background: #fff;
+  bottom: 0;
+  left: 0;
+}
 #mapCanvas{
   width: 100%;
    height: 400px;
