--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,16 @@ h1,h2,h3,p{
     font-size: 80px;
     
 }
+.vib{
+    transition: 1000ms;
+}
+.vib:hover{
+    transform: scale(1.2);
+    transition: 1000ms;
+}
+.mee{
+    margin-top: 2%;
+}
 .same{
     text-align: left;
     margin-top: 3%;
@@ -25,6 +35,9 @@ h1,h2,h3,p{
    margin-left: 60%;
    border-radius: 50%;
    width: 40%;
+}
+.kib{
+    width: 50%;
 }
 .me2{
    border-radius: 50%;
@@ -58,6 +71,48 @@ p{
     padding: 10%;
     transition: 1000ms;
 }
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+fieldset, label { margin: 0; padding: 0; }
+body{ margin: 20px; }
+h1 { font-size: 1.5em; margin: 10px; }
+
+/****** Style Star Rating Widget *****/
+
+.rating { 
+  border: none;
+  float: left;
+}
+
+.rating > input { display: none; } 
+.rating > label:before { 
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.rating > .half:before { 
+  content: "\f089";
+  position: absolute;
+}
+
+.rating > label { 
+  color: #ddd; 
+ float: right; 
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 
 .m:hover{
     transform: scale(1.2);
     transition: 1000ms;
