--- a/css/main.css
+++ b/css/main.css
@@ -52,9 +52,9 @@ h1,h2,h3,p{
    border-radius: 50%;
    width: 40%;
 }
-h3{
+/*h3{
     color: #fff;
-}
+}*/
 .marg{
     margin-top: 50%;
     background: #fff;
