--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Architects Daughter', cursive;
 
 }
-h1,h2,h3,p{
+h1,h2,h3,h4,p{
 
     font-family: 'Raleway', sans-serif;
 
@@ -105,10 +105,11 @@ p{
     margin-top: 5%;
 }
 .pp{
-    margin-left: -30%;
+    margin-left: -20%;
 }
 .img{
-    width: 40%;
+    height: 70%;
+    width: 70%;
 
 }
 .foot{
