--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,20 @@
 body{
-    
+
     font-family: 'Raleway', sans-serif;
 
     font-family: 'Architects Daughter', cursive;
 
 }
-h1,h2,h3,p{
-    
+h1,h2,h3,h4,p{
+
     font-family: 'Raleway', sans-serif;
 
     font-family: 'Architects Daughter', cursive;
 
     text-align: center;
+}
+.heroo{
+    color: #fff;
 }
 .colorNav{
   color: #f05f40;
@@ -52,9 +55,9 @@ h1,h2,h3,p{
    border-radius: 50%;
    width: 40%;
 }
-h3{
+/*h3{
     color: #fff;
-}
+}*/
 .marg{
     margin-top: 50%;
     background: #fff;
@@ -106,11 +109,12 @@ p{
     margin-top: 5%;
 }
 .pp{
-    margin-left: -30%;
+    margin-left: -20%;
 }
 .img{
-    width: 40%;
-  
+    height: 70%;
+    width: 70%;
+
 }
 .foot{
     width: 100%;
@@ -259,7 +263,6 @@ p{
 @media screen and (max-width: 640px){
     .hero h1 { font-size: 4em; }
 }
-
 
 /*start of gallery*/
 body {
