--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,10 @@ p{
 .btn{
     margin-left: 40%;
 }
+h5{
+    text-align: center;
+    margin-top: -20px;
+}
 .play{
   -vendor-animation-duration: 3s;
   -vendor-animation-delay: 2s;
